--- a/Develop/client/public/index.html
+++ b/Develop/client/public/index.html
@@ -26,7 +26,7 @@
     rel="stylesheet">
 
 
-  <title>Google Book Search</title>
+  <title>Book Search Engine</title>
 </head>
 
 <body>
@@ -43,5 +43,3 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
-
-</html>
